fixed overflow on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,7 @@
 
 body {
   font-family: 'Ubuntu', sans-serif;
+  overflow-x: hidden;
 }
 
 a {
